--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,27 @@
 
 <!-- <p id="notice"><%= notice %></p> -->
+<div class="freq-cloud"><span class="frequency-text">Word Counter</span>
+  <div class="plus">
+    <span style="display:none"><%= var = Post.pluck(:body) %> </span>
+    <span style="display:none">
+        <%= bank = var.join.downcase.split(/[^'’\p{L}\p{M}]+/) %>
+        <% frequencies = Hash.new(0) %>
+        <%= bank.each { |word| frequencies[word] += 1 } %>
+        <% frequencies = frequencies.sort_by {|a, b| b } %>
+        <%= tally = frequencies.each { |word, frequency| puts word + " = " + frequency.to_s } %>
+        <%= a = tally.last(10).reverse.join(", ")  %>
+    </span>
+    <span> 
+        <%= a.titleize.gsub(/, (\d+)/, " = \\1") %>
+    </span>
+  </div>
+</div>
 
 <h1>Library</h1>
 
 
 <br>
+<div id="library">
 
 <% @posts = Post.all.order('created_at DESC') %>
  <% @posts.each do |post| %>
@@ -18,35 +35,26 @@
         </div>
         <div class="created-at"><%= "Posted " + time_ago_in_words(post.created_at) + " ago"%></div>
         <br>
-        <span style="white-space: pre-wrap;"><%= post.body %></span>
-        <br>
-
-          <span style="display:none;">
-              <% words = post.body.split %>
-              <% frequencies = Hash.new(0) %>
-              <% words.each do |word| %>
-                  <% frequencies[word.downcase] += 1 %>
-              <% end %>
-              <% frequencies = frequencies.sort_by do |word,count| %>
-                  <% count %>
-              <% end %>
-              <%= tally = frequencies.each do|word,count| %>
-                  <%=  puts word+ ("nothing here") + count.to_s %>
-              <% end %>
-
-              <% a = tally.last(3).reverse.join(" ")  %>
-           
-              <%= a.titleize %>
-               </span>
-          </span>
-      </div>
+        <span class="post-body" style="white-space: pre-wrap;"><%= @postbody = post.body %>
+        </span><br >
+        </div>
       <div class="post-cutter"> </div>
-        <% end %>  
-    <% end %>
+ <% end %>  
+<% end %>
 <br>
+</div>
+
 
 <div class="new_post_button">
 <%= link_to 'New Post', new_post_path, :class=>"btn btn-default", :role=>"button" %>
 </div>
 
+
+
+
+
+
+
+<br>
+<br>
 
